# Asset-hunter

./: README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  sedUOSg9f  tailwind.config.ts
client/: index.html  requirements.md
client/src/: App.tsx  index.css
client/src/components/: AddLeadDialog.tsx  AnalysisInterstitial.tsx  AssetDetailMobile.tsx  AssetDetailPanel.tsx  AssetDetailSheet.tsx  AssetHunterLogo.tsx  ConfidenceBadge.tsx  DataProvenanceCard.tsx  DealFeed.tsx  DealIntelligencePanel.tsx  HunterRadar.tsx  LeadStatusBadge.tsx  MobileNav.tsx  Navigation.tsx  ScoringRationale.tsx
client/src/hooks/: use-auth.ts  use-leads.ts  useScrollReveal.ts
client/src/lib/: analytics.ts
client/src/pages/: AssetDetail.tsx  Contact.tsx  Dashboard.tsx  Demo.tsx  Feed.tsx  Hunt.tsx  Inbox.tsx  Landing.tsx  LeadDetail.tsx  Login.tsx  Pricing.tsx  Privacy.tsx  Pulse.tsx  Signup.tsx  (+3 more)
python_engine/: __init__.py  main.py  models.py
python_engine/scanners/: __init__.py  chrome.py  shopify.py
python_engine/services/: __init__.py  gemini_verifier.py  serpapi_client.py
script/: build.ts
scripts/: seed-stripe-products.ts
server/: app_routes.ts  data-enrichment.ts  direct-scrapers.ts  github-backup.ts  hunter-intelligence.ts  index.ts  notifications.ts  python-client.ts  routes.ts  storage.ts  webhookHandlers.ts
shared/: routes.ts  schema.ts
shared/models/: auth.ts
tmp/mcp_output/: conn_figma_01KDGNJJGSMAC9PA7FZ0DNX8P0_get_metadata_20251227_201159_967532.txt
v6_platform/fastapi_backend/: .env.example  main.py  requirements.txt
(+11 files in other folders)
